--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Em busca da cidade perdida</title>
 </head>
 <body>
+    <main>
+        <div class="passo" id="passo-0">
+            
+        </div>
+    </main> 
     
 </body>
 </html>
