--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
             <button class="btn-proximo" data-proximo="2">Pernambuco</button>
         </div>
+        <div class="passo" id="passo-1">
+            
+        </div>
     </main> 
     
 </body>
